@@ -1,4 +1,4 @@
-/* $Id: game.c,v 1.31 2004-08-28 23:17:45 schaffner Exp $ */
+/* $Id: game.c,v 1.32 2004-10-23 19:09:58 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -23,7 +23,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-char game_rcsid[] = "$Id: game.c,v 1.31 2004-08-28 23:17:45 schaffner Exp $";
+char game_rcsid[] = "$Id: game.c,v 1.32 2004-10-23 19:09:58 schaffner Exp $";
 #endif
 
 #ifdef WINDOWS
@@ -332,8 +332,6 @@ void init_game()
 	Clear_window = 2;		//	do portal only window clear.
 
 	set_detail_level_parameters(Detail_level);
-
-	build_mission_list(0);
 
 	/* Register cvars */
 	cvar_registervariable(&r_framerate);
