@@ -12,6 +12,7 @@
 	* main/menu.c, main/mission.c, main/mission.h, main/multi.c,
 	main/multi.h, main/network.c: move mission list handling functionality
 	to mission.c, remove unnecessary load_mission calls in menu.c
+	* main/game.c: remove unnecessary build_mission_list call
 
 2004-10-21  Martin Schaffner  <maschaffner@gmx.ch>
 
